header section done

--- a/index.html
+++ b/index.html
@@ -12,16 +12,34 @@
 <body>
    <header>
     <nav class="navbar flex">
-        <h4 class="sidebar">Influencer products</h4>
-        <ul class="manu flex">
-            <li class="list"><a href="" class="links">Home</a></li>
-            <li class="list"><a href="" class="links">Products</a></li>
-            <li class="list"><a href="" class="links">Sign up</a></li>
-            <li class="list"><a href="" class="links">Lonin</a></li>
+        <h4 class=" text-b">Influencer products</h4>
+        <div class="nav-contain flex">
+            <ul class="manu flex ">
+            <li class="list"><a href="" class="links text-b">Home</a></li>
+            <li class="list"><a href="" class="links text-b">Products</a></li>
+            <li class="list"><a href="" class="links text-b">Sign up</a></li>
+            <li class="list"><a href="" class="links text-b">Lonin</a></li>
         </ul>
-        <i class="fa-solid fa-magnifying-glass"></i>
+        <div class="icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
         <i class="fa-solid fa-cart-shopping"></i>
+        </div>
+        </div>
     </nav>
+    <section class="bannar flex">
+        <div class="bannar-text">
+            <h2 class="heading ">Start Your Journey As <br>
+Influencer</h2>
+<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed scelerisque eros. Lectus faucibus.</p>
+<button class="btn">preebook now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div class="bannar-img">
+            <img src="./images/main-camera.png" alt="">
+        </div>
+    </section>
    </header> 
+   <main>
+    
+   </main>
 </body>
 </html>
