--- a/index.html
+++ b/index.html
@@ -39,7 +39,78 @@ Influencer</h2>
     </section>
    </header> 
    <main>
-    
+    <section class="brands">
+
+    </section>
+   
+    <section class="card-containar">
+        <h2>Popular Collection</h2>
+    <div class="card-containar-content">
+      <div class="card">
+        <img src="./images/tripod.png" alt="">
+        <h2 class="card-head">Flex Tripod</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/mic.png" alt="">
+        <h2 class="card-head">microphone</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/airpod.png" alt="">
+        <h2 class="card-head">Airpod Pro</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 80.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/drone.png" alt="">
+        <h2 class="card-head">Drone</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 50.34</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/lights.png" alt="">
+        <h2 class="card-head">Flex Tripod</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/single-light.png" alt="">
+        <h2 class="card-head">Flex Tripod</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/action.png" alt="">
+        <h2 class="card-head">Flex Tripod</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/tripod.png" alt="">
+        <h2 class="card-head">Flex Tripod</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      <div class="card">
+        <img src="./images/tripod.png" alt="">
+        <h2 class="card-head">Flex Tripod</h2>
+        <h4>$50.35</h4>
+        <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
+        <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
+      </div>
+      </div>
+    </section>
    </main>
 </body>
 </html>
