added another section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>module-10-project </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/project.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -38,11 +41,19 @@ Influencer</h2>
         </div>
     </section>
    </header> 
+
+
+
+
+   <!-- start main -->
    <main>
+    
+    <!-- brands name section -->
     <section class="brands">
 
     </section>
-   
+
+   <!-- card section -->
     <section class="card-containar">
         <h2>Popular Collection</h2>
     <div class="card-containar-content">
@@ -110,7 +121,37 @@ Influencer</h2>
         <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
       </div>
       </div>
+      <p class="see">See More <i class="fa-solid fa-arrow-right"></i></p>
     </section>
+
+
+    <!-- feature section -->
+     <section class="feature-section">
+        <div class="feature flex">
+            <img src="./images/gear.png" alt="">
+        <div class="feature-text">
+            <h1 class="feature-head">Featured products at one place</h1>
+            <p class="feature-para">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="button btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        </div>
+
+     </section>
    </main>
+
+
+
+<!-- footer  -->
+   <footer>
+    <div class="footer">
+        <h2>Influencer products</h2>
+        <p class="footer-para">Copyright © 2020  influencer products</p>
+        <p class="footer-para">All rights reserved</p>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+    </div>
+   </footer>
 </body>
 </html>
