all are done but some of small issus are not fix like background img of banner

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li class="list"><a href="" class="links text-b">Home</a></li>
             <li class="list"><a href="" class="links text-b">Products</a></li>
             <li class="list"><a href="" class="links text-b">Sign up</a></li>
-            <li class="list"><a href="" class="links text-b">Lonin</a></li>
+            <li class="list"><a href="" class="links text-b">Login</a></li>
         </ul>
         <div class="icon">
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -47,10 +47,19 @@ Influencer</h2>
 
    <!-- start main -->
    <main>
-    
+
     <!-- brands name section -->
     <section class="brands">
+        <div class="brands-name">
+            <img src="./logos/Alibaba.svg" alt="">
+        <img src="./logos/Amazon.svg" alt="">
+        <img src="./logos/Daraz.pk Logo.svg" alt="">
+        <img src="./logos/Ebay.svg" alt="">
+        <img src="./logos/Walmart.svg" alt="">
+        <img src="./logos/Rakuten.svg" alt="">
+        <img src="./logos/Target.svg" alt="">
 
+        </div>
     </section>
 
    <!-- card section -->
@@ -66,7 +75,7 @@ Influencer</h2>
       </div>
       <div class="card">
         <img src="./images/mic.png" alt="">
-        <h2 class="card-head">microphone</h2>
+        <h2 class="card-head">Microphone</h2>
         <h4>$50.35</h4>
         <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
         <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
@@ -80,28 +89,28 @@ Influencer</h2>
       </div>
       <div class="card">
         <img src="./images/drone.png" alt="">
-        <h2 class="card-head">Drone</h2>
+        <h2 class="card-head">Drone short   </h2>
         <h4>$50.35</h4>
         <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 50.34</p>
         <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
       </div>
       <div class="card">
         <img src="./images/lights.png" alt="">
-        <h2 class="card-head">Flex Tripod</h2>
+        <h2 class="card-head">Shot Lights  </h2>
         <h4>$50.35</h4>
         <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
         <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
       </div>
       <div class="card">
         <img src="./images/single-light.png" alt="">
-        <h2 class="card-head">Flex Tripod</h2>
+        <h2 class="card-head">Single Light</h2>
         <h4>$50.35</h4>
         <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
         <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
       </div>
       <div class="card">
         <img src="./images/action.png" alt="">
-        <h2 class="card-head">Flex Tripod</h2>
+        <h2 class="card-head">Action cam</h2>
         <h4>$50.35</h4>
         <p class="card-para"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> 40.39</p>
         <p class="card-para">Wordwide shifting available Buyers <br> protection possible!</p>
